test/files/continuations-neg/ts-1681-nontail-return.check
ts-1681-nontail-return.scala:10: error: return expressions in CPS code must be in tail position
      return v
      ^
one error found
